# estrutura_zero

./: .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflow/: ci.yml
.github/workflows/: ci.yml
app/: main.py
app/pipeline/: __init__.py  extract.py  load.py  transform.py
data/output/: output.xlsx
docs/: index.md
search/: search_index.json
tests/: test_pipeline.py
