[tool.poetry]
name = "estrutura-zero"
version = "0.1.0"
description = "meu projeto de etl python"
authors = ["lcorreasantos <lcorreasantos@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
pandas = "^3.0.3"
openpyxl = "^3.1.5"
pytest = "^9.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
