[tool.poetry]
name = "estrutura-zero"
version = "0.1.0"
description = "meu projeto de etl python"
authors = ["lcorreasantos <lcorreasantos@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
pandas = "^3.0.3"
openpyxl = "^3.1.5"
pytest = "^9.0.3"
isort = "^8.0.1"
blue = "^0.9.1"
pydocstyle = "^6.3.0"
pip-audit = "^2.10.0"
setuptools = "^82.0.1"
taskipy = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
known_third_party = []

[tool.taskipy.tasks]

format = "isort . && blue ."