[tool.poetry]
name = "estrutura-zero"
version = "0.1.0"
description = "meu projeto de etl python"
authors = ["lcorreasantos <lcorreasantos@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
pandas = "^3.0.3"
openpyxl = "^3.1.5"
pytest = "^9.0.3"
isort = "^8.0.1"
blue = "^0.9.1"
pydocstyle = "^6.3.0"
pip-audit = "^2.10.0"
setuptools = "^82.0.1"
taskipy = "^1.14.1"
mkdocs = "^1.6.1"
mkdocstrings-python = "^2.0.4"
pygments = "^2.20.0"
mkdocs-material = "^9.7.6"
pymdown-extensions = "^10.21.3"
mkdocs-bootstrap386 = "^0.0.2"
pre-commit = "^4.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
known_third_party = []

[tool.taskipy.tasks]
format = "isort . && blue ."
test = "poetry run pytest -v"
run = "python3 app/main.py"
kill = "kill -9 $(lsof -t -i:8000)"
